# apps/next/src/app/api/auth/check/route.ts
@@ -1,24 +1,0 @@
-import { checkAdmin, checkUser } from '@/auth';
-import { UserRole } from '@/helpers/UserRole';
-import { emptyHandler } from '@/helpers/emptyHandler';
-
-type POSTOutput = { role?: UserRole };
-export function POST(req: Request) {
-  let resp: POSTOutput;
-  switch (true) {
-    case checkAdmin(req):
-      resp = { role: 'admin' };
-      break;
-
-    case checkUser(req):
-      resp = { role: 'user' };
-      break;
-
-    default:
-      resp = { role: undefined };
-      break;
-  }
-  return Response.json(resp);
-}
-
-export const OPTIONS = emptyHandler;
